I corrected issue on small carousel

--- a/src/css/compiledTailwind.css
+++ b/src/css/compiledTailwind.css
@@ -311,16 +311,16 @@
   height: 2rem !important;
 }
 
+.h-\[12rem\] {
+  height: 12rem !important;
+}
+
 .h-\[14rem\] {
   height: 14rem !important;
 }
 
 .h-\[300px\] {
   height: 300px !important;
-}
-
-.h-\[6rem\] {
-  height: 6rem !important;
 }
 
 .h-\[8rem\] {
@@ -333,14 +333,6 @@
 
 .h-full {
   height: 100% !important;
-}
-
-.h-\[12rem\] {
-  height: 12rem !important;
-}
-
-.h-\[10rem\] {
-  height: 10rem !important;
 }
 
 .max-h-full {
@@ -393,6 +385,22 @@
 
 .w-full {
   width: 100% !important;
+}
+
+.w-\[5rem\] {
+  width: 5rem !important;
+}
+
+.w-\[10rem\] {
+  width: 10rem !important;
+}
+
+.w-\[15rem\] {
+  width: 15rem !important;
+}
+
+.w-\[20rem\] {
+  width: 20rem !important;
 }
 
 .max-w-\[90\%\] {
@@ -1139,11 +1147,6 @@
   outline-style: solid !important;
 }
 
-.drop-shadow-2xl {
-  --tw-drop-shadow: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15)) !important;
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow) !important;
-}
-
 .invert {
   --tw-invert: invert(100%) !important;
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow) !important;
@@ -1214,22 +1217,6 @@
 }
 
 @media (min-width: 640px) {
-  .sm\:bottom-32 {
-    bottom: 8rem !important;
-  }
-
-  .sm\:bottom-40 {
-    bottom: 10rem !important;
-  }
-
-  .sm\:bottom-64 {
-    bottom: 16rem !important;
-  }
-
-  .sm\:bottom-52 {
-    bottom: 13rem !important;
-  }
-
   .sm\:bottom-48 {
     bottom: 12rem !important;
   }
@@ -1266,10 +1253,6 @@
     width: 50% !important;
   }
 
-  .sm\:w-full {
-    width: 100% !important;
-  }
-
   .sm\:w-3\/4 {
     width: 75% !important;
   }
@@ -1278,16 +1261,16 @@
     width: 16rem !important;
   }
 
+  .sm\:w-full {
+    width: 100% !important;
+  }
+
   .sm\:flex-row {
     flex-direction: row !important;
   }
 
   .sm\:items-center {
     align-items: center !important;
-  }
-
-  .sm\:gap-1 {
-    gap: 0.25rem !important;
   }
 
   .sm\:gap-3 {
@@ -1496,40 +1479,12 @@
 }
 
 @media (min-width: 500px) and (max-width: 639px) {
-  .csm\:mt-10 {
-    margin-top: 2.5rem !important;
-  }
-
-  .csm\:mt-14 {
-    margin-top: 3.5rem !important;
-  }
-
-  .csm\:mt-20 {
-    margin-top: 5rem !important;
-  }
-
-  .csm\:h-\[10rem\] {
-    height: 10rem !important;
-  }
-
   .csm\:h-\[12rem\] {
     height: 12rem !important;
   }
 
-  .csm\:h-\[24rem\] {
-    height: 24rem !important;
-  }
-
-  .csm\:h-\[16rem\] {
-    height: 16rem !important;
-  }
-
   .csm\:w-1\/3 {
     width: 33.333333% !important;
-  }
-
-  .csm\:w-1\/2 {
-    width: 50% !important;
   }
 
   .csm\:w-full {
@@ -1538,14 +1493,6 @@
 
   .csm\:justify-center {
     justify-content: center !important;
-  }
-
-  .csm\:pt-10 {
-    padding-top: 2.5rem !important;
-  }
-
-  .csm\:pt-20 {
-    padding-top: 5rem !important;
   }
 }
 
